tests/integration/languages/snapshots/r#mod__integration__languages__extractor__test_python_function_extraction.snap
---
source: tests/integration/languages/extractor.rs
expression: "serde_json::to_string_pretty(&snapshot_data).unwrap()"
---
{
  "chunks": [
    {
      "chunk_type": "File",
      "comment_ranges": [],
      "content": "\ndef hello_world():\n    print(\"Hello, world!\")\n\ndef calculate_sum(a, b):\n    return a + b\n\ndef fibonacci(n):\n    if n <= 1:\n        return n\n    return fibonacci(n-1) + fibonacci(n-2)\n",
      "end_line": 11,
      "language": "python",
      "name": "entire_file",
      "original_indentation": 0,
      "start_line": 1
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "def hello_world():\n    print(\"Hello, world!\")",
      "end_line": 3,
      "language": "python",
      "name": "hello_world",
      "original_indentation": 0,
      "start_line": 2
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "def calculate_sum(a, b):\n    return a + b",
      "end_line": 6,
      "language": "python",
      "name": "calculate_sum",
      "original_indentation": 0,
      "start_line": 5
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "def fibonacci(n):\n    if n <= 1:\n        return n\n    return fibonacci(n-1) + fibonacci(n-2)",
      "end_line": 11,
      "language": "python",
      "name": "fibonacci",
      "original_indentation": 0,
      "start_line": 8
    }
  ],
  "source_code": "\ndef hello_world():\n    print(\"Hello, world!\")\n\ndef calculate_sum(a, b):\n    return a + b\n\ndef fibonacci(n):\n    if n <= 1:\n        return n\n    return fibonacci(n-1) + fibonacci(n-2)\n",
  "test_name": "test_python_function_extraction",
  "total_chunks": 4
}
