tests/integration/languages/snapshots/r#mod__integration__languages__extractor__test_ruby_attr_accessor_extraction.snap
---
source: tests/integration/languages/extractor.rs
expression: "serde_json::to_string_pretty(&snapshot_data).unwrap()"
---
{
  "chunks": [
    {
      "chunk_type": "File",
      "comment_ranges": [],
      "content": "\nclass Product\n  attr_accessor :name, :price\n  attr_reader :id\n  attr_writer :description\nend\n",
      "end_line": 6,
      "language": "ruby",
      "name": "entire_file",
      "original_indentation": 0,
      "start_line": 1
    },
    {
      "chunk_type": "Class",
      "comment_ranges": [],
      "content": "class Product\n  attr_accessor :name, :price\n  attr_reader :id\n  attr_writer :description\nend",
      "end_line": 6,
      "language": "ruby",
      "name": "Product",
      "original_indentation": 0,
      "start_line": 2
    },
    {
      "chunk_type": "Method",
      "comment_ranges": [],
      "content": "  attr_accessor :name, :price",
      "end_line": 3,
      "language": "ruby",
      "name": "name, price (2)",
      "original_indentation": 2,
      "start_line": 3
    },
    {
      "chunk_type": "Method",
      "comment_ranges": [],
      "content": "  attr_reader :id",
      "end_line": 4,
      "language": "ruby",
      "name": "id (1)",
      "original_indentation": 2,
      "start_line": 4
    },
    {
      "chunk_type": "Method",
      "comment_ranges": [],
      "content": "  attr_writer :description",
      "end_line": 5,
      "language": "ruby",
      "name": "description (1)",
      "original_indentation": 2,
      "start_line": 5
    }
  ],
  "source_code": "\nclass Product\n  attr_accessor :name, :price\n  attr_reader :id\n  attr_writer :description\nend\n",
  "test_name": "test_ruby_attr_accessor_extraction",
  "total_chunks": 5
}
