tests/integration/languages/snapshots/r#mod__integration__languages__extractor__test_ruby_class_method_extraction.snap
---
source: tests/integration/languages/extractor.rs
expression: "serde_json::to_string_pretty(&snapshot_data).unwrap()"
---
{
  "chunks": [
    {
      "chunk_type": "File",
      "comment_ranges": [],
      "content": "\nclass User\n  def self.find_by_email(email)\n    puts \"Finding user by email: #{email}\"\n  end\n\n  def instance_method\n    \"instance\"\n  end\nend\n",
      "end_line": 10,
      "language": "ruby",
      "name": "entire_file",
      "original_indentation": 0,
      "start_line": 1
    },
    {
      "chunk_type": "Class",
      "comment_ranges": [],
      "content": "class User\n  def self.find_by_email(email)\n    puts \"Finding user by email: #{email}\"\n  end\n\n  def instance_method\n    \"instance\"\n  end\nend",
      "end_line": 10,
      "language": "ruby",
      "name": "class",
      "original_indentation": 0,
      "start_line": 2
    },
    {
      "chunk_type": "CodeBlock",
      "comment_ranges": [],
      "content": "  def self.find_by_email",
      "end_line": 3,
      "language": "ruby",
      "name": "name",
      "original_indentation": 11,
      "start_line": 3
    },
    {
      "chunk_type": "CodeBlock",
      "comment_ranges": [],
      "content": "  def self.find_by_email(email)\n    puts \"Finding user by email: #{email}\"\n  end",
      "end_line": 5,
      "language": "ruby",
      "name": "class_method",
      "original_indentation": 2,
      "start_line": 3
    },
    {
      "chunk_type": "CodeBlock",
      "comment_ranges": [],
      "content": "  def instance_method",
      "end_line": 7,
      "language": "ruby",
      "name": "name",
      "original_indentation": 6,
      "start_line": 7
    },
    {
      "chunk_type": "Method",
      "comment_ranges": [],
      "content": "  def instance_method\n    \"instance\"\n  end",
      "end_line": 9,
      "language": "ruby",
      "name": "method",
      "original_indentation": 2,
      "start_line": 7
    }
  ],
  "source_code": "\nclass User\n  def self.find_by_email(email)\n    puts \"Finding user by email: #{email}\"\n  end\n\n  def instance_method\n    \"instance\"\n  end\nend\n",
  "test_name": "test_ruby_class_method_extraction",
  "total_chunks": 6
}
