tests/integration/languages/snapshots/r#mod__integration__languages__extractor__test_ruby_function_extraction.snap
---
source: tests/integration/languages/extractor.rs
expression: "serde_json::to_string_pretty(&snapshot_data).unwrap()"
---
{
  "chunks": [
    {
      "chunk_type": "File",
      "comment_ranges": [],
      "content": "\ndef hello_world\n  puts \"Hello, world!\"\nend\n\ndef calculate_sum(a, b)\n  a + b\nend\n",
      "end_line": 8,
      "language": "ruby",
      "name": "entire_file",
      "original_indentation": 0,
      "start_line": 1
    },
    {
      "chunk_type": "Method",
      "comment_ranges": [],
      "content": "def hello_world\n  puts \"Hello, world!\"\nend",
      "end_line": 4,
      "language": "ruby",
      "name": "hello_world",
      "original_indentation": 0,
      "start_line": 2
    },
    {
      "chunk_type": "Method",
      "comment_ranges": [],
      "content": "def calculate_sum(a, b)\n  a + b\nend",
      "end_line": 8,
      "language": "ruby",
      "name": "calculate_sum",
      "original_indentation": 0,
      "start_line": 6
    }
  ],
  "source_code": "\ndef hello_world\n  puts \"Hello, world!\"\nend\n\ndef calculate_sum(a, b)\n  a + b\nend\n",
  "test_name": "test_ruby_function_extraction",
  "total_chunks": 3
}
