tests/integration/languages/snapshots/r#mod__integration__languages__extractor__test_rust_function_extraction.snap
---
source: tests/integration/languages/extractor.rs
expression: "serde_json::to_string_pretty(&snapshot_data).unwrap()"
---
{
  "chunks": [
    {
      "chunk_type": "File",
      "comment_ranges": [],
      "content": "\nfn hello_world() {\n    println!(\"Hello, world!\");\n}\n\npub fn add(a: i32, b: i32) -> i32 {\n    a + b\n}\n",
      "end_line": 8,
      "language": "rust",
      "name": "entire_file",
      "original_indentation": 0,
      "start_line": 1
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "fn hello_world() {\n    println!(\"Hello, world!\");\n}",
      "end_line": 4,
      "language": "rust",
      "name": "hello_world",
      "original_indentation": 0,
      "start_line": 2
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "pub fn add(a: i32, b: i32) -> i32 {\n    a + b\n}",
      "end_line": 8,
      "language": "rust",
      "name": "add",
      "original_indentation": 0,
      "start_line": 6
    }
  ],
  "source_code": "\nfn hello_world() {\n    println!(\"Hello, world!\");\n}\n\npub fn add(a: i32, b: i32) -> i32 {\n    a + b\n}\n",
  "test_name": "test_rust_function_extraction",
  "total_chunks": 3
}
