tests/integration/languages/snapshots/r#mod__integration__languages__extractor__test_rust_module_extraction.snap
---
source: tests/integration/languages/extractor.rs
expression: "serde_json::to_string_pretty(&snapshot_data).unwrap()"
---
{
  "chunks": [
    {
      "chunk_type": "File",
      "comment_ranges": [],
      "content": "\npub mod utils {\n    pub fn helper() -> i32 {\n        42\n    }\n\n    pub struct Config {\n        value: String,\n    }\n}\n\nmod private_utils {\n    fn internal_function() {}\n}\n",
      "end_line": 14,
      "language": "rust",
      "name": "entire_file",
      "original_indentation": 0,
      "start_line": 1
    },
    {
      "chunk_type": "Module",
      "comment_ranges": [],
      "content": "pub mod utils {\n    pub fn helper() -> i32 {\n        42\n    }\n\n    pub struct Config {\n        value: String,\n    }\n}",
      "end_line": 10,
      "language": "rust",
      "name": "utils",
      "original_indentation": 0,
      "start_line": 2
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "    pub fn helper() -> i32 {\n        42\n    }",
      "end_line": 5,
      "language": "rust",
      "name": "helper",
      "original_indentation": 4,
      "start_line": 3
    },
    {
      "chunk_type": "Struct",
      "comment_ranges": [],
      "content": "    pub struct Config {\n        value: String,\n    }",
      "end_line": 9,
      "language": "rust",
      "name": "Config",
      "original_indentation": 4,
      "start_line": 7
    },
    {
      "chunk_type": "CodeBlock",
      "comment_ranges": [],
      "content": "mod private_utils",
      "end_line": 12,
      "language": "rust",
      "name": "name",
      "original_indentation": 4,
      "start_line": 12
    },
    {
      "chunk_type": "Module",
      "comment_ranges": [],
      "content": "mod private_utils {\n    fn internal_function() {}\n}",
      "end_line": 14,
      "language": "rust",
      "name": "private_utils",
      "original_indentation": 0,
      "start_line": 12
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "    fn internal_function() {}",
      "end_line": 13,
      "language": "rust",
      "name": "internal_function",
      "original_indentation": 4,
      "start_line": 13
    }
  ],
  "source_code": "\npub mod utils {\n    pub fn helper() -> i32 {\n        42\n    }\n\n    pub struct Config {\n        value: String,\n    }\n}\n\nmod private_utils {\n    fn internal_function() {}\n}\n",
  "test_name": "test_rust_module_extraction",
  "total_chunks": 7
}
