tests/integration/languages/snapshots/r#mod__integration__languages__extractor__test_rust_struct_extraction.snap
---
source: tests/integration/languages/extractor.rs
expression: "serde_json::to_string_pretty(&snapshot_data).unwrap()"
---
{
  "chunks": [
    {
      "chunk_type": "File",
      "comment_ranges": [],
      "content": "\nstruct Person {\n    name: String,\n    age: u32,\n}\n\npub struct Config {\n    debug: bool,\n}\n",
      "end_line": 9,
      "language": "rust",
      "name": "entire_file",
      "original_indentation": 0,
      "start_line": 1
    },
    {
      "chunk_type": "CodeBlock",
      "comment_ranges": [],
      "content": "struct Person {\n    name: String,\n    age: u32,\n}",
      "end_line": 5,
      "language": "rust",
      "name": "struct",
      "original_indentation": 0,
      "start_line": 2
    },
    {
      "chunk_type": "CodeBlock",
      "comment_ranges": [],
      "content": "pub struct Config {\n    debug: bool,\n}",
      "end_line": 9,
      "language": "rust",
      "name": "struct",
      "original_indentation": 0,
      "start_line": 7
    }
  ],
  "source_code": "\nstruct Person {\n    name: String,\n    age: u32,\n}\n\npub struct Config {\n    debug: bool,\n}\n",
  "test_name": "test_rust_struct_extraction",
  "total_chunks": 3
}
