tests/integration/languages/snapshots/r#mod__integration__languages__extractor__test_rust_trait_extraction.snap
---
source: tests/integration/languages/extractor.rs
expression: "serde_json::to_string_pretty(&snapshot_data).unwrap()"
---
{
  "chunks": [
    {
      "chunk_type": "File",
      "comment_ranges": [],
      "content": "\npub trait Display {\n    fn fmt(&self) -> String;\n\n    fn to_string(&self) -> String {\n        self.fmt()\n    }\n}\n\ntrait Clone {\n    fn clone(&self) -> Self;\n}\n",
      "end_line": 12,
      "language": "rust",
      "name": "entire_file",
      "original_indentation": 0,
      "start_line": 1
    },
    {
      "chunk_type": "CodeBlock",
      "comment_ranges": [],
      "content": "pub trait Display {\n    fn fmt(&self) -> String;\n\n    fn to_string(&self) -> String {\n        self.fmt()\n    }\n}",
      "end_line": 8,
      "language": "rust",
      "name": "trait",
      "original_indentation": 0,
      "start_line": 2
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "    fn to_string(&self) -> String {\n        self.fmt()\n    }",
      "end_line": 7,
      "language": "rust",
      "name": "function",
      "original_indentation": 4,
      "start_line": 5
    },
    {
      "chunk_type": "CodeBlock",
      "comment_ranges": [],
      "content": "trait Clone {\n    fn clone(&self) -> Self;\n}",
      "end_line": 12,
      "language": "rust",
      "name": "trait",
      "original_indentation": 0,
      "start_line": 10
    }
  ],
  "source_code": "\npub trait Display {\n    fn fmt(&self) -> String;\n\n    fn to_string(&self) -> String {\n        self.fmt()\n    }\n}\n\ntrait Clone {\n    fn clone(&self) -> Self;\n}\n",
  "test_name": "test_rust_trait_extraction",
  "total_chunks": 4
}
